--- a/views/css/login.css
+++ b/views/css/login.css
@@ -12102,7 +12102,7 @@ a:focus {
 }
 
 .bg-login-image {
-    background: url(http://localhost/juniorPizza/views/img/icon.jpg);
+    background: url(http://localhost/dulce&salado/views/img/logo.png);
     background-position: center;
     background-size: cover
 }
